# MaterialX

./: CMakeLists.txt
cmake/modules/: MaterialXConfig.cmake.in
documents/: CMakeLists.txt
resources/: CMakeLists.txt
